@startuml




package ui {
        class EnableCandidateUI {
            +listDisabledCandidates()
            +printCandidates()
        }

    }




    package application {
        class EnableCandidateController {
            +enableCandidate()
            +disabledCandidates()
        }
    }

    package repository {

        interface CandidateRepository{
            +.save()
        }
    }

    package domain {
        class SystemUser{
            +.isActive()
            +.activate()
        }

        class AuthorizationService {
            +authorizationService() : AuthorizationService
            +ensureAuthenticatedUserHasAnyOf()
        }

        class Candidate {
            +.user()
        }
        class CandidateManagementService{
           +allCandidate()
           +enableCandidate()
        }
    }




CandidateManagementService -> CandidateRepository
EnableCandidateUI --> EnableCandidateController
CandidateRepository -> Candidate
Candidate --> SystemUser
EnableCandidateController --> Candidate
EnableCandidateController --> CandidateRepository
EnableCandidateController --> AuthorizationService
EnableCandidateController --> CandidateManagementService
@enduml